only one curve cap is visible while backface culling is enabled - (again) #35097

Closed
opened 2013-04-26 19:42:38 +02:00 by Alexander N. · 4 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 SP1 64 bit, different computers/different GPUs

- Blender version with error, and version that worked ---

all 2.6x i tested

  • blender-2.65a-windows64.zip, both caps looks like open!!

  • blender-2.66a-windows64.zip, both caps looks like open!!

  • blender-2.66-r55616-win64.zip, both caps looks like open!!

  • blender-2.66-r55639-win64.zip, only one cap closed, the other open

  • blender-2.67-RC-windows64.zip (r56271), only one cap closed, the other open

    • Short description of error ---
      i think i have a "Déjà-vu". this is a very related issue to "[#34785] only one curve cap is visible while backface culling is enabled" ( http://projects.blender.org/tracker/index.php?func=detail&aid=34785 )... or it is the same.
      i don't know why, the test file of the issue #34785 is working well, but when i make it again from scratch it is again with the issue of one cap is visible and one not.

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---

  • open blender

  • on 3D view, hit [Del], - to delete the default cube.

  • on 3D view, hit [Shift]+- , , , to create a bezier curve circle named "BezierCircle"

  • on 3D view, hit [Shift]+- , , , to create a 2'nd bezier curve circle named "BezierCircle.001"

  • on 3D view, hit [Tab], to go to edit mode for "BezierCircle.001"

  • on 3D view, hit - , - , to scale the "BezierCircle.001" by 5 units

  • on curve "Object Data" panel, disable"Cyclic" on section "Active Spline" {use_cyclic_u}

  • on curve "Object Data" panel, select "BezierCircle" as "Bevel Object" on section "Geometry" {bevel_object}

  • on curve "Object Data" panel, enable "Fill Caps" on section "Geometry" {use_fill_caps}

  • on 3D view, hit - to open the right side panel

  • on 3D view, right side panel, enable "Backface Culling" on section "Display" {show_backface_culling}
    ... now, when you look to the both open ends of the "BezierCircle.001", again, only one cap is filled.

%%%

%%%--- Operating System, Graphics card --- Windows 7 SP1 64 bit, different computers/different GPUs - Blender version with error, and version that worked --- all 2.6x i tested - blender-2.65a-windows64.zip, both caps looks like open!! - blender-2.66a-windows64.zip, both caps looks like open!! - blender-2.66-r55616-win64.zip, both caps looks like open!! - blender-2.66-r55639-win64.zip, only one cap closed, the other open - blender-2.67-RC-windows64.zip (r56271), only one cap closed, the other open - Short description of error --- i think i have a "Déjà-vu". this is a very related issue to "[#34785] only one curve cap is visible while backface culling is enabled" ( http://projects.blender.org/tracker/index.php?func=detail&aid=34785 )... or it is the same. i don't know why, the test file of the issue #34785 is working well, but when i make it again from scratch it is again with the issue of one cap is visible and one not. - Steps for others to reproduce the error (preferably based on attached .blend file) --- - open blender - on 3D view, hit [Del], - [x] to delete the default cube. - on 3D view, hit [Shift]+- [x], <curve>, <circle>, to create a bezier curve circle named "BezierCircle" - on 3D view, hit [Shift]+- [x], <curve>, <circle>, to create a 2'nd bezier curve circle named "BezierCircle.001" - on 3D view, hit [Tab], to go to edit mode for "BezierCircle.001" - on 3D view, hit - [x], - [x], to scale the "BezierCircle.001" by 5 units - on curve "Object Data" panel, disable"Cyclic" on section "Active Spline" {use_cyclic_u} - on curve "Object Data" panel, select "BezierCircle" as "Bevel Object" on section "Geometry" {bevel_object} - on curve "Object Data" panel, enable "Fill Caps" on section "Geometry" {use_fill_caps} - on 3D view, hit - [x] to open the right side panel - on 3D view, right side panel, enable "Backface Culling" on section "Display" {show_backface_culling} ... now, when you look to the both open ends of the "BezierCircle.001", again, only one cap is filled. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r56330.%%%

%%%fixed r56330.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%fix was wrong! (caps would randomly flip), real fix r56331.%%%

%%%fix was wrong! (caps would randomly flip), real fix r56331.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35097
No description provided.