fix [#35097] only one curve cap is visible while backface culling is enabled - (again) also replace array copying with memcpy.